Again trying to fix white space on scroll

--- a/src/Styles/Nav.css
+++ b/src/Styles/Nav.css
@@ -100,7 +100,7 @@
         padding: 5px 20px;
         position: fixed;
         width: 100%;
-        z-index: 99999999999;
+        z-index: 3;
     } 
     .Nav .Mobile a{
         align-items: center;
