--- a/src/Styles/NewPost.css
+++ b/src/Styles/NewPost.css
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0;
     width: 100vw;
-    z-index: 2;
+    z-index: 4;
 }
 .NewPost-Wrap{
     background: var(--bgBox);
@@ -76,12 +76,12 @@
 @media(max-width: 768px){
     .NewPost{
         animation: slide_up 0.5s ease-in-out;
-        bottom: 0;
-        z-index: 999999999999;
+        z-index: 4;
     }
     .NewPost-Wrap{
         border-radius: 12px 12px 0px 0px;
         bottom: 0;
+        left: 0;
         padding-bottom: calc(20px + env(safe-area-inset-bottom));
         position: fixed;
     }
@@ -92,5 +92,6 @@
         position: absolute;
         right: 20px;
         top: calc(20px + 12px - 18.5px);
+        width: auto;
     }
 }
